--- a/README.org
+++ b/README.org
@@ -9,7 +9,7 @@
 ** Requirements
    - Libraries
      Depends on [[https://github.com/vydd/sketch][sketch]], [[https://github.com/Gleefre/sketch-fit][sketch-fit]], [[https://github.com/Gleefre/stopclock][stopclock]], [[https://github.com/Shirakumo/harmony][harmony]] (and [[https://github.com/Shirakumo/cl-mixed][cl-mixed]]) and finally [[https://alexandria.common-lisp.dev/][alexandria]].
-     You will need to install [[https://github.com/Gleefre/sketch-fit][sketch-fit]] and [[https://github.com/Gleefre/stopclock][stopclock]] from source.
+     You will need to install [[https://github.com/Gleefre/sketch-fit][sketch-fit]] and [[https://github.com/Gleefre/stopclock][stopclock]] from source, while others are available from [[https://www.quicklisp.org/beta/][quicklisp]].
    - Foreign dependencies
      - SDL2, SDL2 Image, SDL2 TTF
        =sketch= relies on =SDL2= library which is a C library.
